feat: implement thread-based chat sessions and storage backend
Add support for thread-specific chat sessions in Discord, allowing separate memory contexts for each thread. Introduce a configurable storage backend system with in-memory and SQLite options. Update session management to handle context-specific user models and memory. Split long messages to comply with Discord's character limit.

The changes enable better conversation management in server threads, provide flexible storage options, and improve message handling for long responses.

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,10 @@ DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
 # Default model to use if not specified
 DEFAULT_MODEL=gpt-4o
+
+# Storage configuration
+# Options: memory, sqlite
+STORAGE_TYPE=memory
+
+# Database path (for SQLite storage)
+DB_PATH=sessions.db
